--- a/Supervised_Learning-Logistic_Regression.ipynb
+++ b/Supervised_Learning-Logistic_Regression.ipynb
@@ -4030,6 +4030,252 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "coeff_df = DataFrame(zip(X.columns, np.transpose(log_model.coef_)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>rate_marriage</td>\n",
+       "      <td>[-0.697924125998]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>age</td>\n",
+       "      <td>[-0.0563646299078]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>yrs_married</td>\n",
+       "      <td>[0.103919041638]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>children</td>\n",
+       "      <td>[0.0181622363802]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>religious</td>\n",
+       "      <td>[-0.368517662336]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>educ</td>\n",
+       "      <td>[0.00875505261517]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>occ2</td>\n",
+       "      <td>[0.298052262971]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>occ3</td>\n",
+       "      <td>[0.607992729515]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>occ4</td>\n",
+       "      <td>[0.346221679741]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>occ5</td>\n",
+       "      <td>[0.942505111823]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>occ6</td>\n",
+       "      <td>[0.905699489366]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>hocc2</td>\n",
+       "      <td>[0.218606329611]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>hocc3</td>\n",
+       "      <td>[0.324519468827]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>hocc4</td>\n",
+       "      <td>[0.188305155362]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>hocc5</td>\n",
+       "      <td>[0.211804971647]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>hocc6</td>\n",
+       "      <td>[0.214690656171]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                0                   1\n",
+       "0   rate_marriage   [-0.697924125998]\n",
+       "1             age  [-0.0563646299078]\n",
+       "2     yrs_married    [0.103919041638]\n",
+       "3        children   [0.0181622363802]\n",
+       "4       religious   [-0.368517662336]\n",
+       "5            educ  [0.00875505261517]\n",
+       "6            occ2    [0.298052262971]\n",
+       "7            occ3    [0.607992729515]\n",
+       "8            occ4    [0.346221679741]\n",
+       "9            occ5    [0.942505111823]\n",
+       "10           occ6    [0.905699489366]\n",
+       "11          hocc2    [0.218606329611]\n",
+       "12          hocc3    [0.324519468827]\n",
+       "13          hocc4    [0.188305155362]\n",
+       "14          hocc5    [0.211804971647]\n",
+       "15          hocc6    [0.214690656171]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeff_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y) # splitt training set , test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4774, 16), (1592, 16), (4774,), (1592,))"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, X_test.shape, Y_train.shape, Y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_model2 = LogisticRegression()\n",
+    "log_model2.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class_predict = log_model2.predict(X_test) # classification prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.72675879397\n"
+     ]
+    }
+   ],
+   "source": [
+    "print metrics.accuracy_score(Y_test, class_predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 9: Conclusion and more Resources\n",
+    "So what could we do to try to further improve our Logistic Regression model? We could try some [regularization techniques](https://en.wikipedia.org/wiki/Regularization_%28mathematics%29#Regularization_in_statistics_and_machine_learning) or using a non-linear model.  \n",
+    "I'll leave the Logistic Regression topic here for you to explore more possibilites on your own. Here are several more resources and tutorials with other data sets to explore:  \n",
+    "1.) Here's another great post on how to do logistic regression analysis using Statsmodels from [yhat](http://blog.yhat.com/posts/logistic-regression-and-python.html)!  \n",
+    "2.) The [SciKit learn Documentation](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html) includes several examples at the bottom of the page.  \n",
+    "3.) [DataRobot](https://www.datarobot.com/blog/classification-with-scikit-learn) has a great overview of Logistic Regression  \n",
+    "4.) Fantastic resource from [aimotion.blogspot](http://aimotion.blogspot.com/2011/11/machine-learning-with-python-logistic.html) on the Logistic Regression and the Mathmatics of how it relates to the cost function and gradient!  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
