--- a/Support_Vector_Machine.ipynb
+++ b/Support_Vector_Machine.ipynb
@@ -563,7 +563,8 @@
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -639,12 +640,12 @@
    "metadata": {},
    "source": [
     "Part 6: Additional Resources\n",
-    "1.) Microsoft Research Paper SVM Tutorial\n",
-    "2.) StatSoft Online Textbook\n",
-    "3.) Sci Kit Learn Documentation\n",
-    "4.) Wikipedia\n",
-    "5.) Columbia Lecture Slides\n",
-    "6.) Andrew Ng's Class Notes\n"
+    "1.) [Microsoft Research Paper SVM Tutorial](https://www.microsoft.com/en-us/research/wp-content/uploads/2016/02/svmtutorial.pdf)  \n",
+    "2.) [StatSoft Online Textbook](http://www.statsoft.com/Textbook/Support-Vector-Machines)  \n",
+    "3.) [Sci Kit Learn Documentation](http://scikit-learn.org/stable/modules/svm.html)\n",
+    "4.) [Wikipedia](https://en.wikipedia.org/wiki/Support_vector_machine)\n",
+    "5.) [Columbia Lecture Slides](\n",
+    "6.) [Andrew Ng's Class Notes](\n"
    ]
   }
  ],
