--- a/Support_Vector_Machine.ipynb
+++ b/Support_Vector_Machine.ipynb
@@ -644,9 +644,18 @@
     "2.) [StatSoft Online Textbook](http://www.statsoft.com/Textbook/Support-Vector-Machines)  \n",
     "3.) [Sci Kit Learn Documentation](http://scikit-learn.org/stable/modules/svm.html)\n",
     "4.) [Wikipedia](https://en.wikipedia.org/wiki/Support_vector_machine)\n",
-    "5.) [Columbia Lecture Slides](\n",
-    "6.) [Andrew Ng's Class Notes](\n"
+    "5.) [Columbia Lecture Slides](http://www.cs.columbia.edu/~kathy/cs4701/documents/jason_svm_tutorial.pdf)\n",
+    "6.) [Andrew Ng's Class Notes](http://cs229.stanford.edu/notes/cs229-notes3.pdf)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
